separate plugin to core + library
* separate plugin to core + library

motivation: introduce a slimmed version of the plugin that can be used for non-library projects (eg boms) to reduce code duplication

changes:
* split the plugin into core and library
* remove redundant repositories
* hide apple specifics begind an an ENV variable
* update gradle wrapper source to non-apple one
* add bintray support